--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
           id="users-col">
           <div class="enter fw-bold text-capitalize" id="enter">Enter user id above to search  </div>
           <div class="card" style="width: 18rem" id="card">
-            <img src="..." class="w-100" id="user-image"  alt="..." />
+            <div class="card-header p-0 rounded-3 border-bottom" >
+              <img src="..." class="w-100 rounded-3" id="user-image"  alt="..." style="height: 100%;" />
+            </div>
             <div class="card-body">
               <h5 class="card-title" id="user-name">Card title</h5>
               <p class="card-text d-flex flex-column">
-                <span id="public-repositries"></span>
-                <span id="followers"></span>
-                <span id="following"></span>
-                <span id="location"></span>
-                <span id="id"></span>
+                <span class="border-bottom text-capitalize" id="public-repositries"></span>
+                <span class="border-bottom text-capitalize" id="followers"></span>
+                <span class="border-bottom text-capitalize" id="following"></span>
+                <span class="border-bottom text-capitalize" id="location"></span>
+                <span class="border-bottom text-capitalize" id="id"></span>
               </p>
             </div>
           </div>
