--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Find Users</title>
   </head>
   <body>
     <div class="container-fluid">
